--- a/style.css
+++ b/style.css
@@ -1,36 +1,11 @@
-/*
-  Josh's Custom CSS Reset
-  https://www.joshwcomeau.com/css/custom-css-reset/
-*/
-*, *::before, *::after {
-    box-sizing: border-box;
-  }
-  * {
-    margin: 0;
-  }
-  body {
-    line-height: 1.5;
-    -webkit-font-smoothing: antialiased;
-  }
- 
-  input, button, textarea, select {
-    font: inherit;
-  }
-  p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
-  }
-  p {
-    text-wrap: pretty;
-  }
-  h1, h2, h3, h4, h5, h6 {
-    text-wrap: balance;
-  }
-  #root, #__next {
-    isolation: isolate;
-  }
+:root {
+  --left-space: 40px
+}
 
   body{
-    display: flex;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
   }
 
   .imageContainer {
@@ -44,6 +19,7 @@
     width: 100%;
     height: 100%;
   }
+
   .right {
     height: 100vh;
     width: 66vw;
