--- a/style.css
+++ b/style.css
@@ -2,34 +2,35 @@
   --left-space: 40px
 }
 
-  body{
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-  }
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
 
-  .imageContainer {
-    background-image: url(img/leaf-background.jpg);
-    height: 100vh;
-    width: 33vw;
-    color: white;
-  }
+.container {
+  min-height: 100vh;
+  display: flex;
+}
 
-  img {
-    width: 100%;
-    height: 100%;
-  }
+/* Image Section */
 
-  .right {
-    height: 100vh;
-    width: 66vw;
-  }
+.imageSection {
+  background-image: url(img/leaf-background.jpg);
+  background-position: center center;
+  background-size: cover;
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: white;
+  text-align: center;
+}
 
   .title {
     font-family: 'norse';
     background-color: #00000050;
     display: flex;
-    flex-direction: row;
   }
 
   img {
