--- a/style.css
+++ b/style.css
@@ -27,12 +27,25 @@ body {
   text-align: center;
 }
 
-  .title {
-    font-family: 'norse';
-    background-color: #00000050;
-    display: flex;
-  }
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 5.5rem;
+  font-family: "norse";
+  margin-top: 20vh;
+  padding: 16px 0;
+  background-color: rgba(0,0,0,0.4);
+}
 
-  img {
-    height: 100px;
-  }
+.title img {
+  height: 125px;
+}
+
+.title h2 {
+  margin: 0;
+}
+
+.photoBy {
+  font-size: 0.9rem;
+}
