--- a/style.css
+++ b/style.css
@@ -128,3 +128,16 @@ input.error {
   border: 1px solid red;
 }
 
+.create-button {
+  margin-left: var(--left-space);
+  margin-top: 32px;
+  border: none;
+  background-color: #596D48;
+  padding: 12px 48px;
+  border-radius: 8px;
+  box-shadow: 2px 5px 5px 4px rgba(0, 0, 0, 0.1);
+  cursor:pointer;
+  color: white;
+  font-weight: 700;
+  font-size: 1.1rem;
+}
