--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   --left-space: 40px
 }
 
+* {
+  outline: none;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -119,12 +123,12 @@ body {
   display: block;
 }
 
-input.focus {
+input:focus {
   border: 1px solid blue;
   box-shadow: 2px 1px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
-input.error {
+input:invalid {
   border: 1px solid red;
 }
 
